SSB:171: fixed image on mobile

--- a/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
@@ -155,6 +155,10 @@
                 padding-top: 5rem;
             }
         }
+
+        .banner-wrapper-text-message {
+            font-size: 4.2rem !important;
+        }
     }
 }
 
@@ -223,6 +227,14 @@
         max-width: 1280px;
         margin: 0 auto;
 
+        .banner-wrapper-text {
+            > div {
+                width: min-content;
+                margin-inline-start: auto;
+                padding-top: 5rem;
+            }
+        }
+
         .image-banner-logo {
             transform: translateY(-38%);
         }
@@ -256,7 +268,7 @@
 
         .image-banner-logo {
             transform: translate(6%, -59%);
-            height: 26rem !important;
+            height: 23rem !important;
         }
 
         .info-text-message {
@@ -293,7 +305,7 @@
     .banner-row-wrapper {
         .image-banner-logo {
             transform: translate(6%, -52%);
-            height: 20rem !important;
+            height: 19rem !important;
         }
     }
 }
